--- a/Server/html/index.html
+++ b/Server/html/index.html
@@ -33,8 +33,7 @@
                 </div>
                 <div class="Procesador">
                     
-                </div>
-            -->
+                </div>-->
             <canvas id="instancia1" height="400"></canvas>
         </div>
         <div class="ins2">
